--- a/index.html
+++ b/index.html
@@ -3,50 +3,85 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>For My Love ❤️</title>
+<title>For My Rakkaus ❤️</title>
 
 <style>
 body {
     margin: 0;
     font-family: 'Segoe UI', sans-serif;
-    background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+    background: linear-gradient(135deg, #ff758c, #ff7eb3);
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    text-align: center;
     overflow: hidden;
+    text-align: center;
+}
+
+/* Taustasydämet */
+.heart {
+    position: absolute;
+    color: rgba(255,255,255,0.8);
+    animation: floatUp linear infinite;
+}
+
+@keyframes floatUp {
+    from {
+        transform: translateY(100vh);
+        opacity: 1;
+    }
+    to {
+        transform: translateY(-10vh);
+        opacity: 0;
+    }
+}
+
+/* Räjähdyssydämet */
+.explosion-heart {
+    position: absolute;
+    font-size: 25px;
+    animation: explode 1s ease-out forwards;
+}
+
+@keyframes explode {
+    from {
+        transform: scale(1) translate(0,0);
+        opacity: 1;
+    }
+    to {
+        transform: scale(2) translate(var(--x), var(--y));
+        opacity: 0;
+    }
 }
 
 .container {
     background: white;
     padding: 40px;
-    border-radius: 20px;
+    border-radius: 25px;
     box-shadow: 0 15px 40px rgba(0,0,0,0.2);
-    max-width: 400px;
+    max-width: 420px;
     width: 90%;
+    z-index: 10;
     animation: fadeIn 1s ease-in-out;
 }
 
-h1 {
-    color: #ff4b6e;
-}
+h1 { color: #ff2e63; }
 
 input {
     padding: 10px;
     width: 80%;
-    border-radius: 10px;
+    border-radius: 12px;
     border: 1px solid #ccc;
     margin-top: 15px;
     font-size: 16px;
 }
 
 button {
-    margin-top: 15px;
+    margin: 10px;
     padding: 10px 20px;
     border: none;
-    border-radius: 20px;
-    background-color: #ff4b6e;
+    border-radius: 25px;
+    background-color: #ff2e63;
     color: white;
     font-size: 16px;
     cursor: pointer;
@@ -54,14 +89,25 @@ button {
 }
 
 button:hover {
-    background-color: #ff1f50;
-    transform: scale(1.05);
+    background-color: #ff0055;
+    transform: scale(1.1);
 }
 
 img {
     max-width: 100%;
     border-radius: 20px;
     margin-bottom: 20px;
+}
+
+.big-img {
+    width: 100%;
+    border-radius: 25px;
+}
+
+.warning {
+    color: red;
+    margin-top: 10px;
+    font-weight: bold;
 }
 
 @keyframes fadeIn {
@@ -82,6 +128,48 @@ img {
 </div>
 
 <script>
+
+/* 🎵 TAUSTAMUSIIKKI */
+const music = new Audio("music.mp3");
+music.loop = true;
+
+/* 💕 Taustasydämet */
+function createHeart() {
+    const heart = document.createElement("div");
+    heart.classList.add("heart");
+    heart.innerHTML = "❤️";
+    heart.style.left = Math.random() * 100 + "vw";
+    heart.style.fontSize = (15 + Math.random() * 20) + "px";
+    heart.style.animationDuration = (3 + Math.random() * 5) + "s";
+    document.body.appendChild(heart);
+
+    setTimeout(() => heart.remove(), 8000);
+}
+setInterval(createHeart, 300);
+
+/* 💥 Sydänräjähdys */
+function explodeHearts() {
+    for (let i = 0; i < 25; i++) {
+        const heart = document.createElement("div");
+        heart.classList.add("explosion-heart");
+        heart.innerHTML = "💖";
+
+        heart.style.left = "50%";
+        heart.style.top = "50%";
+
+        const x = (Math.random() - 0.5) * 600 + "px";
+        const y = (Math.random() - 0.5) * 600 + "px";
+
+        heart.style.setProperty('--x', x);
+        heart.style.setProperty('--y', y);
+
+        document.body.appendChild(heart);
+
+        setTimeout(() => heart.remove(), 1000);
+    }
+}
+
+/* Päivämäärä */
 function checkDate() {
     const correctDate = "27.6.2025";
     const userInput = document.getElementById("dateInput").value;
@@ -89,25 +177,44 @@ function checkDate() {
     if (userInput === correctDate) {
         showValentinePage();
     } else {
-        alert("Höh 😢 Väärä päivämäärä, kokeile uudestaan rakas!");
+        alert("Höh 😢 väärä päivämäärä, kokeile uudestaan rakas!");
     }
 }
 
+/* Valentine sivu */
 function showValentinePage() {
     document.getElementById("content").innerHTML = `
         <img src="unnamed.jpg" alt="Meidän kuva">
         <h1>Will you be my valentine? ❤️</h1>
-        <button onclick="showSuccess()">yes my love 💕</button>
-        <button onclick="showSuccess()">yes ❤️</button>
+        <button onclick="showSuccess()">yes raksu 💕</button>
+        <button id="noBtn" onclick="handleNo()">umm no</button>
+        <div id="warningText"></div>
     `;
 }
 
-function showSuccess() {
-    document.getElementById("content").innerHTML = `
-        <img src="unnamed.jpg" alt="Meidän kuva isona">
-        <h1 style="font-size:40px; color:#ff1f50;">JESSS JIPPII ❤️🎉</h1>
-    `;
+/* No nappi */
+function handleNo() {
+    document.getElementById("warningText").innerHTML =
+        '<div class="warning">toi nyt ei ole vaihtoehto 😤❤️</div>';
+    document.getElementById("noBtn").remove();
 }
+
+/* Yes nappi */
+function showSuccess() {
+
+    music.play();          // 🎵 Musiikki päälle
+    explodeHearts();       // 💥 Sydänräjähdys
+
+    setTimeout(() => {
+        document.getElementById("content").innerHTML = `
+            <img src="rizz.png" class="big-img" alt="Meidän kuva 2">
+            <h1 style="font-size:32px; color:#ff0055;">
+            Jes rakkauspakkaus, pian nähdään ❤️🎉
+            </h1>
+        `;
+    }, 900);
+}
+
 </script>
 
 </body>
